--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
-<html>
-  
-<body>
-  
-Hello there, awesome person!
-
-</body>
-</html>
+<head>
+  <title> Hi there, hello!  This is my title!</title>
+</head>
