add-items-and-lists
created links for each of my favorite websites

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </html>
 
 <ol>
-  <li>deviantart.com<li>
-  <li>youtube.com<li>
-  <li>amazon.com</li>
+  <li><a href="https://deviantart.com">This is a link to deviantart!</a></li>
+  <li><a href="https://youtube.com">This is a link to youtube!</a></li>
+  <li><a href="https://amazon.com">This is a link to amazon!</a></li>
 </ol>
