--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     </h1>
 <head>
   <title> Hi there, hello!  This is my title!</title>
+  <link rel="stylesheet" href="style.css">
   <img src=https://avatars.githubusercontent.com/u/81484725?v=4>
 </head>
   </body>
